@@ -1,5 +1,8 @@
 2004-05-20  Matthew Mueller  <donut@dakotacom.net>
 
+	* arch/ogl/ogl.c: add RENDERSTATS counter for number of textures
+	loaded after texture caching stage (d1x r1.34)
+
 	* arch/ogl/ogl.c: use GL_INDEX_BITS to get bpp for color buffer
 	for renderstats (d1x r1.33)
 
